--- a/js/template/test/CompleteBloodCount.html
+++ b/js/template/test/CompleteBloodCount.html
@@ -3,7 +3,7 @@
 
 	<!-- RBC -->
 	<div class="subsection subsection-rbc test-section">
-		<div class="test-section-inner-with-icon">
+		<div class="test-section-inner-with-icon first">
 			<div class="yui3-g-r">
 				<!-- description -->
 				<div class="yui3-u-19-24">
@@ -17,7 +17,9 @@
 					</div>
 				</div>
 			</div>
+        </div>
 
+        <div class="test-section-inner-with-icon desktop-only last">
 			<div class="yui3-g-r">
 				<div class="yui3-u-1-2">
 					<div class="yui3-u-c">
@@ -47,7 +49,7 @@
 
 	<!-- WBC -->
 	<div class="subsection subsection-wbc test-section">
-		<div class="test-section-inner-with-icon">
+		<div class="test-section-inner-with-icon first">
 			<div class="yui3-g-r">
 				<!-- description -->
 				<div class="yui3-u-19-24">
@@ -60,7 +62,9 @@
 					</div>
 				</div>
 			</div>
+        </div>
 
+        <div class="test-section-inner-with-icon desktop-only last">
 			<div class="yui3-g-r">
 				<div class="yui3-u-1-2">
 					<div class="yui3-u-c">
@@ -90,7 +94,7 @@
 	
 	<!-- Platelets -->
 	<div class="page-section subsection subsection-platelet test-section">
-		<div class="test-section-inner-with-icon">
+		<div class="test-section-inner-with-icon first">
 			<div class="yui3-g-r">
 				<!-- description -->
 				<div class="yui3-u-19-24">
@@ -103,7 +107,9 @@
 					</div>
 				</div>
 			</div>
+        </div>
 
+        <div class="test-section-inner-with-icon desktop-only last">
 			<div class="yui3-g-r">
 				<div class="yui3-u-1-2">
 					<div class="yui3-u-c">
