--- a/js/template/test/UrineAnalysis.html
+++ b/js/template/test/UrineAnalysis.html
@@ -2,7 +2,7 @@
 
     <!-- Visual Analysis -->
     <div class="test-section visual">
-        <div class="test-section-inner-with-icon">
+        <div class="test-section-inner-with-icon first">
             <div class="yui3-g-r">
                 <!-- description -->
                 <div class="yui3-u-19-24">
@@ -16,7 +16,9 @@
                     </div>
                 </div>
             </div>
+        </div>
 
+        <div class="test-section-inner-with-icon desktop-only last">
             <div class="yui3-g-r">
                 <div class="yui3-u-1-2">
                     <div class="yui3-u-c property color">
@@ -71,7 +73,7 @@
 
     <!-- Chemical Analysis -->
     <div class="test-section visual">
-        <div class="test-section-inner-with-icon">
+        <div class="test-section-inner-with-icon first">
             <div class="yui3-g-r">
                 <!-- description -->
                 <div class="yui3-u-19-24">
@@ -85,7 +87,9 @@
                     </div>
                 </div>
             </div>
+        </div>
 
+        <div class="test-section-inner-with-icon desktop-only last">
             <div class="yui3-g-r">
                 <div class="yui3-u-1-2">
                     <div class="yui3-u-c property concentration">
