urine - ph levels - added legend

--- a/css-sass/view/test/_urine.scss
+++ b/css-sass/view/test/_urine.scss
@@ -163,5 +163,29 @@
     }
 
     .property.ph {
+        .legend {
+            position: absolute;
+            font-weight: bold;
+            font-size: 77%;
+            text-transform: uppercase;
+
+            &.neutral {
+                top: 0;
+                left: 50%;
+                width: 50px;
+                margin-left: -25px;
+                text-align: center;
+            }
+
+            &.acidic {
+                bottom: 3%;
+                left: 23%;
+            }
+
+            &.alkaline {
+                bottom: 3%;
+                right: 23%;
+            }
+        }
     }
 }
