--- a/js/template/test/UrineAnalysis.html
+++ b/js/template/test/UrineAnalysis.html
@@ -110,6 +110,10 @@
                                 <div>{{ph.value}}</div>
                                 <div class="widget-indicator {{#if ph.isBad}}bad{{/if}}" title="Blood should always be at a specific pH level, which is neutral. The kidneys are responsible for maintaining {{patient.name}}’s pH level."></div>
                             </div>
+
+                            <div class="legend neutral">Neutral</div>
+                            <div class="legend acidic">Acidic</div>
+                            <div class="legend alkaline">Alkaline</div>
                         </div>
                     </div>
                 </div>
