urine - added padding

--- a/js/template/test/UrineAnalysis.html
+++ b/js/template/test/UrineAnalysis.html
@@ -20,7 +20,7 @@
 
         <div class="test-section-inner-with-icon desktop-only last">
             <div class="yui3-g-r">
-                <div class="yui3-u-1-2">
+                <div class="yui3-u-11-24">
                     <div class="yui3-u-c property color">
                         <h2>Color</h2>
 
@@ -35,7 +35,9 @@
                     </div>
                 </div>
 
-                <div class="yui3-u-1-2">
+                <div class="yui3-u-1-24 yui3-hidden-phone"></div>
+
+                <div class="yui3-u-11-24">
                     <div class="yui3-u-c property appearance">
                         <h2>Appearance</h2>
 
@@ -91,7 +93,7 @@
 
         <div class="test-section-inner-with-icon desktop-only last">
             <div class="yui3-g-r">
-                <div class="yui3-u-1-2">
+                <div class="yui3-u-11-24">
                     <div class="yui3-u-c property concentration">
                         <h2>Concentration</h2>
 
@@ -99,7 +101,9 @@
                     </div>
                 </div>
 
-                <div class="yui3-u-1-2">
+                <div class="yui3-u-1-24 yui3-hidden-phone"></div>
+
+                <div class="yui3-u-11-24">
                     <div class="yui3-u-c property ph">
                         <h2>pH Levels</h2>
 
