--- a/css-sass/view/test/_urine.scss
+++ b/css-sass/view/test/_urine.scss
@@ -17,6 +17,8 @@
         @include secondaryFont;
         position: relative;
 
+        margin: 10px 0;
+
         .palette {
             display: block;
         }
