--- a/css/screen.css
+++ b/css/screen.css
@@ -3327,6 +3327,7 @@ span.placeholder {
 .view-test-urine-analysis .diagram-palette {
   font-family: 'Apercu', sans-serif;
   position: relative;
+  margin: 10px 0;
 }
 .view-test-urine-analysis .diagram-palette .palette {
   display: block;
