--- a/js/template/subtest/Select.html
+++ b/js/template/subtest/Select.html
@@ -2,7 +2,8 @@
 	<ul class="options">
 		{{#each options}}
 			<li class="option">
-				<div class="token"><div class="name">{{.}}</div></div>
+                <div class="widget-indicator"></div>
+				<div class="name">{{.}}</div>
 			</li>
 		{{/each}}
 	</ul>
