--- a/js/template/test/CompleteBloodCount.html
+++ b/js/template/test/CompleteBloodCount.html
@@ -6,7 +6,7 @@
 		<div class="test-section-inner-with-icon first">
 			<div class="yui3-g-r">
 				<!-- description -->
-				<div class="yui3-u-19-24">
+                <div class="yui3-u-19-24 yui3-u-23-24-small-tablet">
 					<div class="yui3-u-c">
 						<div class="test-section-description">
 							<img class="icon" src="images/test/cbc/diagram/rbc-2x.png" alt="" />
@@ -52,7 +52,7 @@
 		<div class="test-section-inner-with-icon first">
 			<div class="yui3-g-r">
 				<!-- description -->
-				<div class="yui3-u-19-24">
+                <div class="yui3-u-19-24 yui3-u-23-24-small-tablet">
 					<div class="yui3-u-c">
 						<div class="test-section-description">
 							<img class="icon" src="images/test/cbc/diagram/wbc-2x.png" alt="" />
