--- a/js/template/test/UrineAnalysis.html
+++ b/js/template/test/UrineAnalysis.html
@@ -5,7 +5,7 @@
         <div class="test-section-inner-with-icon first">
             <div class="yui3-g-r">
                 <!-- description -->
-                <div class="yui3-u-19-24">
+                <div class="yui3-u-19-24 yui3-u-23-24-small-tablet">
                     <div class="yui3-u-c">
                         <div class="test-section-description">
                             <img class="icon" src="images/test/urine/icon/visual-2x.png" alt="" />
@@ -78,7 +78,7 @@
         <div class="test-section-inner-with-icon first">
             <div class="yui3-g-r">
                 <!-- description -->
-                <div class="yui3-u-19-24">
+                <div class="yui3-u-19-24 yui3-u-23-24-small-tablet">
                     <div class="yui3-u-c">
                         <div class="test-section-description">
                             <img class="icon" src="images/test/urine/icon/chemical-2x.png" alt="" />
