Subsection border changed to dotted. https://app.asana.com/0/7908989541876/7906899007935

--- a/css-sass/view/widget/_test-subsection.scss
+++ b/css-sass/view/widget/_test-subsection.scss
@@ -1,6 +1,6 @@
 .view-widget-test-subsection {
 	background-color: #f7f8f6;
-	border-top: 1px solid #b2b2b2;
+	border-top: 1px dotted #b2b2b2;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 
