--- a/js/template/subtest/Range.html
+++ b/js/template/subtest/Range.html
@@ -30,4 +30,14 @@
         <div>
     </div>
 
+    <div class="description">
+        <p>
+            {{#if message}}
+                <span class="message">{{message}}</span><br />
+            {{/if}}
+
+            {{description}}
+        </p>
+    </div>
+
 </div>
