--- a/css-sass/_common.scss
+++ b/css-sass/_common.scss
@@ -77,6 +77,13 @@ $widgetIndicatorWidth: 32px;
     }
 }
 
+.message-tooltip {
+    .message {
+        font-weight: bold;
+        font-size: 116%;
+    }
+}
+
 input {
     @include secondaryFont;
     @include mediumFontSize;
