subtest/pod/Color: added tooltip support subtest/Select: added tooltip support test/cbc: updated copy

--- a/css-sass/view/subtest/pod/_color.scss
+++ b/css-sass/view/subtest/pod/_color.scss
@@ -11,6 +11,7 @@
 		display: block;
 		width: image-width('images/common/result-good-2x.png') / 2;
 		margin: 0 auto;
+		cursor: pointer;
 	}
 
 	.label {
@@ -19,17 +20,7 @@
 		font-size: 210%;
 	}
 
-	.low {
+	.description {
 		display: none;
-	}
-
-	&.bad {
-		.low {
-			display: block;
-		}
-
-		.high {
-			display: none;
-		}
 	}
 }
