--- a/css-sass/view/subtest/_types-of-cell2.scss
+++ b/css-sass/view/subtest/_types-of-cell2.scss
@@ -65,6 +65,7 @@
 	.range {
 		.widget-indicator {
 			vertical-align: middle;
+			cursor: pointer;
 		}
 
 		.text {
@@ -77,5 +78,9 @@
 			display: inline-block;
 			padding-left: 10px;
 		}
+	}
+
+	.description {
+		display: none;
 	}
 }
