UrineAnalysis: updated copy

--- a/js/template/test/UrineAnalysis.html
+++ b/js/template/test/UrineAnalysis.html
@@ -11,7 +11,7 @@
                             <img class="icon" src="images/test/urine/icon/visual-2x.png" alt="" />
 
                             <h1><span>Visual Analysis</span></h1>
-                            <p>We look at the appearance of {{patient.name}}’s urine, as well as investigating.Many factors can affect the color of urine, from medication to diet. Urine is a clear fluid. It can appear cloudy if it contains unexpected cells or crystals.</p>
+                            <p>By using just the naked eye or microscope, we can learn many things about the health of {{patient.name}}’s kidneys and bladder.</p>
                         </div>
                     </div>
                 </div>
@@ -29,7 +29,7 @@
 
                             <div class="label">
                                 <div>{{color.label}}</div>
-                                <div class="widget-indicator {{#if color.isBad}}bad{{/if}}" title="Many factors can affect the color of urine, from medication to diet."></div>
+                                <div class="widget-indicator {{#if color.isBad}}bad{{/if}}"></div>
                             </div>
                         </div>
                     </div>
@@ -42,7 +42,7 @@
                         <h2>Appearance</h2>
 
                         <div class="text">
-                            <span class="widget-indicator {{#if appearance.isBad}}bad{{/if}}" title="Urine is a clear fluid. It can appear cloudy if it contains unexpected cells or crystals."></span><span class="label">{{appearance.label}}</span>
+                            <span class="widget-indicator {{#if appearance.isBad}}bad{{/if}}"></span><span class="label">{{appearance.label}}</span>
                         </div>
 
                         <div class="actual">
@@ -84,7 +84,7 @@
                             <img class="icon" src="images/test/urine/icon/chemical-2x.png" alt="" />
 
                             <h1><span>Chemical Analysis</span></h1>
-                            <p>By analyzing the chemistry of {{patient.name}}’s urine, we are able to understand organ function more clearly and detect any potential issues much sooner.</p>
+                            <p>By analyzing the chemistry of {{patient.name}}’s urine, we are able to understand organ function on a deeper level.</p>
                         </div>
                     </div>
                 </div>
