--- a/js/template/test/OvaParasite.html
+++ b/js/template/test/OvaParasite.html
@@ -2,43 +2,7 @@
     
     <div class="test-section">
         <div class="test-section-inner">
-            <div class="yui3-g-r">
-                <!-- tests -->
-                <div class="yui3-u-1-3 yui3-u-1-2-small-tablet yui3-u-1-2-phone">
-                    <div class="yui3-u-c">
-                        <div class="boolean-container"></div>
-                    </div>
-                </div>
-                
-                <div class="yui3-u-1-3 yui3-u-1-2-small-tablet yui3-u-1-2-phone">
-                    <div class="yui3-u-c">
-                        <div class="boolean-container"></div>
-                    </div>
-                </div>
-                
-                <div class="yui3-u-1-3 yui3-u-1-2-small-tablet yui3-u-1-2-phone">
-                    <div class="yui3-u-c">
-                        <div class="boolean-container"></div>
-                    </div>
-                </div>
-                
-                <div class="yui3-u-1-3 yui3-u-1-2-small-tablet yui3-u-1-2-phone">
-                    <div class="yui3-u-c">
-                        <div class="boolean-container"></div>
-                    </div>
-                </div>
-                
-                <div class="yui3-u-1-3 yui3-u-1-2-small-tablet yui3-u-1-2-phone">
-                    <div class="yui3-u-c">
-                        <div class="boolean-container"></div>
-                    </div>
-                </div>
-                
-                <div class="yui3-u-1-3 yui3-u-1-2-small-tablet yui3-u-1-2-phone">
-                    <div class="yui3-u-c">
-                        <div class="boolean-container"></div>
-                    </div>
-                </div>
+            <div class="yui3-g-r results-container"></div>
         </div>
     </div>
 
