subtest/TypesOfCell2: updated copy (Copy_Dog and Cat_092713.xlsx)

--- a/js/template/subtest/TypesOfCell2.html
+++ b/js/template/subtest/TypesOfCell2.html
@@ -11,7 +11,7 @@
                     <img class="circle big" src="images/subtest/types-of-cell2/{{species}}-circle-big-2x.png" alt="" />
 
                     <div class="percentage">
-                        <span class="number">{{fighter.percentage}}</span>
+                        <span class="number">{{mathRound fighter.percentage}}</span>
                         <span class="symbol">%</span>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
                     <img class="circle medium" src="images/subtest/types-of-cell2/{{species}}-circle-medium-2x.png" alt="" />
 
                     <div class="percentage">
-                        <span class="number">{{defender.percentage}}</span>
+                        <span class="number">{{mathRound defender.percentage}}</span>
                         <span class="symbol">%</span>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                     <img class="circle small" src="images/subtest/types-of-cell2/{{species}}-circle-small-2x.png" alt="" />
 
                     <div class="percentage">
-                        <span class="number">{{watcher.percentage}}</span><span class="symbol">%</span>
+                        <span class="number">{{mathRound watcher.percentage}}</span><span class="symbol">%</span>
                     </div>
                 </div>
 
